[project]
name = "qwen3-vl-moelora"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate>=1.13.0",
    "addict>=2.4.0",
    "bitsandbytes>=0.49.2",
    "datasets>=2.20.0,<3.0.0",
    "faiss-cpu>=1.13.2",
    "fastembed>=0.7.4",
    "gradio==5.46.1",
    "gradio-client==1.13.1",
    "langchain>=1.2.11",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.18",
    "langchain-openai>=1.1.11",
    "langchain-qdrant>=1.1.0",
    "langchain-text-splitters>=1.1.1",
    "langgraph>=1.1.0",
    "modelscope>=1.28.2",
    "oss2>=2.19.1",
    "pandas>=2.3.3",
    "peft>=0.18.1",
    "pillow>=11.3.0",
    "pymupdf>=1.27.2.2",
    "pymupdf4llm>=1.27.2.2",
    "pypdf>=6.8.0",
    "pyqt5>=5.15.11",
    "pyside6>=6.10.2",
    "python-dotenv>=1.2.2",
    "qdrant-client>=1.17.1",
    "qwen-vl-utils>=0.0.14",
    "ragas>=0.3.2",
    "rank-bm25>=0.2.2",
    "sentence-transformers>=5.2.3",
    "sentencepiece>=0.2.1",
    "swanlab>=0.7.11",
    "torch>=2.10.0",
    "torchvision>=0.25.0",
    "transformers>=4.57.6",
    "transformers-stream-generator==0.0.5",
    "tree>=0.2.4",
]
